Add JavaFX and GUI Enhancements
This commit introduces JavaFX into the project, laying the foundation for a Graphical User Interface (GUI) and enhancing user interaction. The addition of JavaFX and GUI improvements aims to provide a more interactive and user-friendly experience. The following modifications have been implemented:

- Added JavaFX dependencies in the build.gradle file to support GUI development and integration.
- Created MainWindow.fxml and DialogBox.fxml to define the GUI layout, utilizing FXML for a more structured and manageable GUI design.
- Implemented MainWindow.java and DialogBox.java as controllers for the FXML files, facilitating dynamic interaction within the GUI.
- Modified Duke.java to initialize and launch the JavaFX application, integrating the backend logic with the frontend GUI.
- Updated the Ui class to support GUI operations, transitioning from console-based interaction to GUI-based feedback and user prompts.
- Added custom styling and layout adjustments to enhance the visual appeal and usability of the GUI.

By integrating JavaFX and focusing on GUI enhancements, this commit significantly improves the application's interactivity and accessibility, offering a modern and engaging user experience.